--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gapi-script": "^1.2.0",
     "lodash": "^4.17.21",
     "next": "12.1.4",
     "next-cookies": "^2.0.3",
     "next-images": "^1.8.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-google-login": "^5.2.2",
     "use-http": "^1.0.26"
   },
   "devDependencies": {
