--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "next": "12.1.4",
     "next-cookies": "^2.0.3",
     "next-images": "^1.8.4",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-google-login": "^5.2.2",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "use-http": "^1.0.26"
   },
   "devDependencies": {
