--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-google-login": "^5.2.2",
+    "react-hot-toast": "^2.4.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
